--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,10 @@
             <version>1.18.30</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>2.3.9</version>
+        </dependency>
     </dependencies>
 </project>
